--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@
 # orchestration services
 services:
   server:
-    image: oxibooru/server:latest
+    image: oxibooru/server:0.5.0
     build:
       context: server
       args: 
@@ -28,7 +28,7 @@ services:
     stop_signal: SIGINT
 
   client:
-    image: oxibooru/client:latest
+    image: oxibooru/client:0.5.0
     build: client
     depends_on:
       - server
