--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -43,6 +43,7 @@ serde_with = "3.12.0"
 thiserror = "2.0.11"
 num-traits = "0.2.19"
 dotenvy = "0.15.7"
+html-escape = "0.2.13"
 
 [dev-dependencies]
 axum-test = "17.3.0"
