--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -40,6 +40,10 @@ tower-http = { version = "0.6.6", features = ["trace", "timeout", "normalize-pat
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 url = { version = "2.5.4", features = ["serde"] }
+utoipa = { version = "5.4.0", features = ["axum_extras", "time", "url", "uuid"] }
+utoipa-axum = "0.2.0"
+utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
+utoipa-swagger-ui-vendored = "0.1.2"
 uuid = { version = "1.13.1", features = ["v4", "serde"] }
 video-rs = "0.10.3"
 walkdir = "2.5.0"
