--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -25,11 +25,13 @@ percent-encoding = "2.3.1"
 rayon = "1.10.0"
 regex = "1.11.1"
 reqwest = { version ="0.12.12", features = ["json"] }
+rustyline = {version = "17.0.2", default-features = false, features = ["signal-hook"]}
 serde = { version = "1.0.217", features = ["derive", "rc"] }
 serde_json = "1.0.138"
 serde_regex = "1.1.0"
 serde_repr = "0.1.19"
 serde_with = "3.12.0"
+signal-hook = "0.3.18"
 strum = { version = "0.27.0", features = ["derive"] }
 swf = "0.2.2"
 thiserror = "2.0.11"
