Action now fetches tags

--- a/.github/workflows/build-containers.yml
+++ b/.github/workflows/build-containers.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          fetch-tags: true
 
       - name: Determine metadata
         run: |
@@ -70,6 +71,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          fetch-tags: true
 
       - name: Determine metadata
         run: |
