--- a/.github/workflows/build-containers.yml
+++ b/.github/workflows/build-containers.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Build container
         run: >
           docker buildx build --push
-          --platform linux/amd64,linux/arm/v7,linux/arm64/v8
+          --platform linux/amd64,linux/arm64/v8
           --build-arg BUILD_INFO=${{ env.build_info }}
           --build-arg BUILD_DATE=${{ env.build_date }}
           --build-arg SOURCE_COMMIT=$GITHUB_SHA
@@ -98,7 +98,7 @@ jobs:
       - name: Build container
         run: >
           docker buildx build --push
-          --platform linux/amd64,linux/arm/v7,linux/arm64/v8
+          --platform linux/amd64,linux/arm64/v8
           --build-arg BUILD_DATE=${{ env.build_date }}
           --build-arg SOURCE_COMMIT=$GITHUB_SHA
           --build-arg DOCKER_REPO=oxibooru/server
