--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -99,7 +99,7 @@ jobs:
           merge-multiple: true
 
       - name: Login to Docker Hub
-        users: docker/login-action@v3
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
