--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       args: 
         # Setting this to `native` can give small performance gains for some 
         # operations such as reverse search, but makes binary less portable.
-        # Leave blank to let Rust determine the target CPU. 
+        # Leave blank to let Rust determine the target architecture. 
         TARGET_CPU:
     depends_on:
       - sql
