--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "oxibooru_server"
-version = "0.7.4"
+version = "0.7.5"
 license = "GPL-3.0"
 edition = "2024"
 
@@ -8,7 +8,7 @@ edition = "2024"
 argon2 = { version = "0.5.3", features = ["std"] }
 axum = { version = "0.8.4", features = ["multipart"] }
 base64 = "0.22.1"
-blake3 = "1.5.5"
+blake3 = { version = "1.5.5", features = ["traits-preview"] }
 byteorder = "1.5.0"
 compact_str = { version = "0.9.0", features = ["serde"] }
 config = { version = "0.15.18", default-features = false, features = ["toml"] }
@@ -18,6 +18,7 @@ diesel_migrations = { version = "2.3.0", features = ["postgres"] }
 dotenvy = "0.15.7"
 flate2 = "1.0.35"
 hex = "0.4.3"
+hmac = "0.12.1"
 image = { version = "0.25.5", features = ["avif-native"] }
 lettre = { version = "0.11.12", features = ["serde"] }
 md5 = "0.7.0"
